@@ -847,7 +847,7 @@ performance on systems without hardware floating point support).
 @item RTMPE        @tab X
 @item RTMPS        @tab X
 @item RTMPT        @tab X
-@item RTMPTE       @tab E
+@item RTMPTE       @tab X
 @item RTMPTS       @tab X
 @item RTP          @tab X
 @item SCTP         @tab X
